Add new templeate to dashboard

--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
@@ -52,7 +52,7 @@
           <img src="{{ asset('bundles/dashboard/people/01.jpg') }}" alt="Livan Frometa" class="circle"> Livan Frometa <i class="mdi-navigation-expand-more right"></i>
         </a>
         <ul id="user-dropdown" class="dropdown-content">
-          <li><a href="http://html.nkdev.info/_con/page-profile.html"><i class="fa fa-user"></i> Profile</a>
+          <li><a href="{{path('profile_index')}}"><i class="fa fa-user"></i> Profile</a>
           </li>
           <li><a href="http://html.nkdev.info/_con/mail-inbox.html"><i class="fa fa-envelope"></i> Messages
               <span class="badge new">2 new</span></a></li>
