--- a/src/DashboardBundle/Resources/views/Templates/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Templates/index.html.twig
@@ -23,15 +23,15 @@
   <div class="row">
     {% for template in templates %}
     <div class="col m3">
-      <div class="card small">
-        <div class="card-image card-image-templeate"><img src="{{asset('bundles/dashboard/images/templates/' ~ template.image)}}">
+      <div class="card small ">
+        <div class="card-image card-image-templeate hoverable"><img src="{{asset('bundles/dashboard/images/templates/' ~ template.image)}}">
           <div class="card-action card-action-templeate">
             <a href="#!" class="azure-text">{{template.name}}</a>
             <a href="#" class="azure-text right"><i class="fa fa-heart"></i></a>
             <a href="#" class="azure-text right"><i class="fa fa-share-alt"></i></a>
           </div>
-        </div>  
-      </div>  
+        </div>
+      </div>
     </div>
   {% endfor %}
   </div>
